# substrate-node-template

./: Makefile
node/: Cargo.toml
node/src/: rpc.rs
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/src/: lib.rs
pallets/template/runtime-api/: Cargo.toml
pallets/template/runtime-api/src/: lib.rs
pallets/template/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
